--- a/style.css
+++ b/style.css
@@ -18,8 +18,7 @@ a {
 
 body {
   width: 100vw;
-  height: auto;
-  overflow: hidden;
+  min-height: 100vh;
 }
 
 nav {
@@ -76,7 +75,7 @@ nav.sticky .nav-right a:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 50vw;
+  width: 70vw;
   height: 100vh;
   overflow-y: scroll;
   background-color: white;
