--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+html, body {
+  overflow-x: hidden;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -120,6 +124,14 @@ section {
   background-attachment: fixed;
   /*Controls how the background image scrolls with the content*/
 }
+
+@media (max-width: 768px) {
+  .main {
+    background-image: url(Image/bg1.png);
+    background-attachment: fixed;
+  }
+}
+
 
 .main .content {
   max-width: 900px;
