--- a/style.css
+++ b/style.css
@@ -125,14 +125,6 @@ section {
   /*Controls how the background image scrolls with the content*/
 }
 
-@media (max-width: 768px) {
-  .main {
-    background-image: url(Image/bg1.png);
-    background-attachment: fixed;
-  }
-}
-
-
 .main .content {
   max-width: 900px;
 }
@@ -148,6 +140,7 @@ section {
   font-weight: 600;
 }
 
+/*
 .animated-text {
   height: 70px;
   overflow: hidden;
@@ -164,6 +157,7 @@ section {
 .animated-text h3:nth-child(1) {
   animation: text-move 6s infinite ease-out;
 }
+
 
 @keyframes text-move {
   0%,
@@ -190,7 +184,7 @@ section {
     margin-top: 0px;
   }
 }
-
+*/
 .btn {
   color: white;
   background-color: #3a6cf4;
@@ -202,7 +196,6 @@ section {
   text-decoration: none;
   letter-spacing: 1px;
   border-radius: 10px;
-  margin-top: 30px;
   transition: 0.5s ease;
 }
 
@@ -211,7 +204,7 @@ section {
 }
 
 .media-icons {
-  margin-top: 50px;
+  margin-block: 10px;
 }
 
 .media-icons a {
@@ -656,6 +649,15 @@ section {
     width: 90%;
   }
 }
+
+@media (max-width: 768px) {
+  .main {
+    background-image: url(Image/bg1.png);
+    background-attachment: fixed;
+  }
+}
+
+
 
 @media (max-width: 660px) {
   .about .content .column-left,
